--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,3 +57,9 @@ android {
 flutter {
     source '../..'
 }
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+}
